fix color issue with dark mode

--- a/src/components/GameEvent/styles.module.css
+++ b/src/components/GameEvent/styles.module.css
@@ -24,4 +24,5 @@
 	padding: 2px 6px;
 	margin-bottom: 4px;
 	max-width: 100%;
+	color: black;
 }
